security/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-bran-traffic
spec:
  podSelector:
    matchLabels:
      app: bran
  ingress: []
